update etl pipeline

--- a/jupyter_notebooks/2.etl.ipynb
+++ b/jupyter_notebooks/2.etl.ipynb
@@ -594,60 +594,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ ETL and preprocessing pipeline built successfully!\n",
+            "✅ ETL + preprocessing complete!\n",
+            "Processed dataset shape: (7043, 28)\n",
+            "Columns: ['SeniorCitizen', 'tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service'] ...\n",
             "Data shape after cleaning: (7043, 22)\n",
             "Categorical features: 17\n",
             "Numeric features: 5\n",
-            "Data shape after encoding: (7043, 27)\n",
-            "\n",
-            "OneHotEncoder categories for each feature:\n",
-            "\n",
-            "gender: ['Female' 'Male']\n",
-            "Partner: ['No' 'Yes']\n",
-            "Dependents: ['No' 'Yes']\n",
-            "PhoneService: ['No' 'Yes']\n",
-            "MultipleLines: ['No' 'No phone service' 'Yes']\n",
-            "InternetService: ['DSL' 'Fiber optic' 'No']\n",
-            "OnlineSecurity: ['No' 'Yes']\n",
-            "OnlineBackup: ['No' 'Yes']\n",
-            "DeviceProtection: ['No' 'Yes']\n",
-            "TechSupport: ['No' 'Yes']\n",
-            "StreamingTV: ['No' 'Yes']\n",
-            "StreamingMovies: ['No' 'Yes']\n",
-            "Contract: ['Month-to-month' 'One year' 'Two year']\n",
-            "PaperlessBilling: ['No' 'Yes']\n",
-            "PaymentMethod: ['Bank transfer (automatic)' 'Credit card (automatic)' 'Electronic check'\n",
-            " 'Mailed check']\n",
-            "Churn: ['No' 'Yes']\n",
-            "CustomerType: ['Both' 'Internet only' 'Phone only']\n",
+            "Data shape after encoding: (7043, 28)\n",
             "\n",
             "New Columns after One-Hot Encoding:\n",
             "\n",
-            "['gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
+            "['SeniorCitizen', 'tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
             "\n"
           ]
         }
       ],
       "source": [
+        "\"\"\"\n",
+        "ETL & Feature Engineering Pipeline for Telecom Churn Dataset\n",
+        "DataFrame-based implementation (avoids NumPy array output)\n",
+        "\"\"\"\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
         "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.compose import ColumnTransformer\n",
         "\n",
         "# =========================\n",
-        "# 1. Add service-based features\n",
+        "# 1. Feature Engineering\n",
         "# =========================\n",
         "def add_service_features(df):\n",
-        "    # CustomerType: Phone only, Internet only, Both\n",
+        "    \"\"\"Add derived service-based features to the dataset.\"\"\"\n",
+        "\n",
+        "    # Define customer type based on available services\n",
         "    def service_type(row):\n",
         "        if row['InternetService'] == 'No':\n",
         "            return \"Phone only\"\n",
@@ -655,30 +642,30 @@
         "            return \"Internet only\"\n",
         "        else:\n",
         "            return \"Both\"\n",
+        "\n",
         "    df['CustomerType'] = df.apply(service_type, axis=1)\n",
         "\n",
-        "    # Internet add-ons\n",
+        "    # Define internet add-ons\n",
         "    internet_add_ons = [\n",
         "        \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\",\n",
         "        \"TechSupport\", \"StreamingTV\", \"StreamingMovies\"\n",
         "    ]\n",
         "\n",
-        "    # Normalize \"No internet service\" to \"No\"\n",
+        "    # Normalize categorical values\n",
         "    for col in internet_add_ons:\n",
         "        df[col] = df[col].replace(\"No internet service\", \"No\")\n",
         "\n",
-        "    # Count number of \"Yes\" internet services\n",
+        "    # Create feature: number of \"Yes\" internet services\n",
         "    df[\"NumInternetServices\"] = (df[internet_add_ons] == \"Yes\").sum(axis=1)\n",
         "\n",
         "    return df\n",
         "\n",
-        "# =========================\n",
-        "# 2. Load and clean dataset\n",
-        "# =========================\n",
-        "def etl_clean_data(filepath):\n",
-        "    df = pd.read_csv(filepath)\n",
         "\n",
-        "    # Add engineered features\n",
+        "# =========================\n",
+        "# 2. Data Cleaning\n",
+        "# =========================\n",
+        "def etl_clean_data(df):\n",
+        "    # Add service-based features\n",
         "    df = add_service_features(df)\n",
         "\n",
         "    # Drop PII\n",
@@ -695,62 +682,60 @@
         "\n",
         "    return df\n",
         "\n",
+        "\n",
         "# =========================\n",
-        "# 3. Preprocessing Pipelines\n",
+        "# 3. Manual Preprocessing (keeping Pandas format)\n",
         "# =========================\n",
-        "def build_preprocessor(df):\n",
-        "    categorical_features = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+        "def preprocess_dataframe(df):\n",
+        "    \"\"\"Perform imputation, scaling, and encoding directly in pandas.\"\"\"\n",
+        "    \n",
+        "    # Separate numeric and categorical columns\n",
         "    numeric_features = [\"tenure\", \"MonthlyCharges\", \"TotalCharges\", \"NumInternetServices\"]\n",
+        "    categorical_features = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
         "\n",
-        "    numeric_transformer = Pipeline(steps=[\n",
-        "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-        "        (\"scaler\", StandardScaler())\n",
-        "    ])\n",
+        "    # 1️⃣ Impute missing numeric values\n",
+        "    for col in numeric_features:\n",
+        "        df[col] = df[col].fillna(df[col].median())\n",
         "\n",
-        "    categorical_transformer = Pipeline(steps=[\n",
-        "        (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
-        "        (\"encoder\", OneHotEncoder(handle_unknown=\"ignore\", drop=\"first\"))\n",
-        "    ])\n",
-        "\n",
-        "    preprocessor = ColumnTransformer(\n",
-        "        transformers=[\n",
-        "            (\"num\", numeric_transformer, numeric_features),\n",
-        "            (\"cat\", categorical_transformer, categorical_features)\n",
-        "        ]\n",
+        "    # 2️⃣ Scale numeric values (z-score normalization)\n",
+        "    df[numeric_features] = df[numeric_features].apply(\n",
+        "        lambda x: (x - x.mean()) / x.std()\n",
         "    )\n",
         "\n",
-        "    return preprocessor\n",
+        "    # 3️⃣ Impute missing categorical values\n",
+        "    for col in categorical_features:\n",
+        "        df[col] = df[col].fillna(df[col].mode()[0])\n",
+        "\n",
+        "    # 4️⃣ One-hot encode categorical variables (drop_first=True for multicollinearity)\n",
+        "    df_encoded = pd.get_dummies(df, columns=categorical_features, drop_first=True)\n",
+        "\n",
+        "    return df_encoded\n",
+        "\n",
         "\n",
         "# =========================\n",
-        "# Prepare cleaned and encoded dataset for usage\n",
+        "# 4. Execute ETL + Preprocessing\n",
         "# =========================\n",
-        "df = etl_clean_data(\"dataset/raw/Telecom_Customer_Churn.csv\")\n",
-        "preprocessor = build_preprocessor(df)\n",
-        "df_encoded = preprocessor.fit_transform(df)\n",
+        "df_cleaned = etl_clean_data(df)\n",
+        "df_encoded = preprocess_dataframe(df_cleaned)\n",
         "\n",
-        "print(\"✅ ETL and preprocessing pipeline built successfully!\")\n",
-        "print(f\"Data shape after cleaning: {df.shape}\")\n",
-        "print(f\"Categorical features: {len(df.select_dtypes(include=['object']).columns)}\")\n",
-        "print(f\"Numeric features: {len(df.select_dtypes(exclude=['object']).columns)}\")\n",
+        "# Save processed dataset\n",
+        "df_cleaned.to_csv(\"dataset/processed/telecom_customer_churn_cleaned.csv\", index=False)\n",
+        "df_encoded.to_csv(\"dataset/processed/telecom_customer_churn_encoded.csv\", index=False)\n",
+        "\n",
+        "\n",
+        "print(\"✅ ETL + preprocessing complete!\")\n",
+        "print(f\"Processed dataset shape: {df_encoded.shape}\")\n",
+        "print(\"Columns:\", df_encoded.columns.tolist()[:10], \"...\")\n",
+        "print(f\"Data shape after cleaning: {df_cleaned.shape}\")\n",
+        "print(f\"Categorical features: {len(df_cleaned.select_dtypes(include=['object']).columns)}\")\n",
+        "print(f\"Numeric features: {len(df_cleaned.select_dtypes(exclude=['object']).columns)}\")\n",
         "print(f\"Data shape after encoding: {df_encoded.shape}\")\n",
-        "# Get the OneHotEncoder from the preprocessor's categorical transformer\n",
-        "encoder = preprocessor.named_transformers_['cat'].named_steps['encoder']\n",
-        "\n",
-        "# Get categorical feature names from the preprocessor\n",
-        "categorical_features = preprocessor.transformers_[1][2]\n",
-        "\n",
-        "# Show the categories for each categorical feature\n",
-        "print('\\nOneHotEncoder categories for each feature:\\n')\n",
-        "for feature, cats in zip(categorical_features, encoder.categories_):\n",
-        "    print(f\"{feature}: {cats}\")\n",
-        "\n",
         "print('\\nNew Columns after One-Hot Encoding:\\n')\n",
-        "# Get the new column names after one-hot encoding\n",
-        "onehot_columns = encoder.get_feature_names_out(categorical_features)\n",
-        "print(onehot_columns.tolist(), '\\n')\n",
+        "print(df_encoded.columns.tolist(), '\\n')\n",
         "\n",
         "# Verify no missing values remain\n",
-        "assert df.isnull().sum().sum() == 0, \"Missing values remain in the DataFrame\"\n",
+        "assert df_cleaned.isnull().sum().sum() == 0, \"Missing values remain in the DataFrame\"\n",
+        "\n",
         "\n"
       ]
     },
@@ -797,14 +782,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cleaned and encoded dataset exported to dataset/processed/\n"
+          "ename": "AttributeError",
+          "evalue": "'numpy.ndarray' object has no attribute 'to_csv'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[9], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m df_cleaned\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/processed/telecom_customer_churn_cleaned.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m df_encoded \u001b[38;5;241m=\u001b[39m df_encoded\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mdf_encoded\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_csv\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/processed/telecom_customer_churn_encoded.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCleaned and encoded dataset exported to dataset/processed/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'to_csv'"
           ]
         }
       ],
@@ -812,23 +801,8 @@
         "# Export the cleaned dataframe to a CSV file in the folder for processed CSV\n",
         "df_cleaned = df.copy()\n",
         "df_cleaned.to_csv('dataset/processed/telecom_customer_churn_cleaned.csv', index=False)\n",
-        "\n",
-        "import os\n",
-        "\n",
-        "# Get encoded column names\n",
-        "encoded_columns = encoder.get_feature_names_out(categorical_features)\n",
-        "\n",
-        "# Define numeric features\n",
-        "numeric_features = [\"tenure\", \"MonthlyCharges\", \"TotalCharges\", \"NumInternetServices\"]\n",
-        "\n",
-        "# Combine numeric features (already scaled) and encoded categorical features\n",
-        "df_encoded_final = pd.DataFrame(df_encoded, columns=list(encoded_columns) + numeric_features)\n",
-        "\n",
-        "# Save to CSV\n",
-        "os.makedirs(\"dataset/processed\", exist_ok=True)\n",
-        "df_encoded_final.to_csv(\"dataset/processed/telecom_customer_churn_encoded.csv\", index=False)\n",
-        "\n",
-        "\n",
+        "df_encoded = df_encoded.copy()\n",
+        "df_encoded.to_csv('dataset/processed/telecom_customer_churn_encoded.csv', index=False)\n",
         "\n",
         "print(f'Cleaned and encoded dataset exported to dataset/processed/')"
       ]
