drop scaling for etl cleaned pipeline

--- a/jupyter_notebooks/2.etl.ipynb
+++ b/jupyter_notebooks/2.etl.ipynb
@@ -519,8 +519,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### **Data Transformation** \n",
-        "### *Data cleaning and processing pipeline*"
+        "### **Data Transformation** "
       ]
     },
     {
@@ -531,110 +530,76 @@
         "\n",
         "The preprocessing pipeline is designed to transform the raw Telecom Customer Churn dataset into a clean, machine-learning-ready format. It standardises data quality, engineers meaningful service-based features, and applies robust encoding and scaling methods to support predictive modelling.\n",
         "\n",
-        "**Steps in the ETL Pipeline:**\n",
+        "#### 1️⃣ ETL & Data Cleaning (No Scaling)\n",
+        "**Goal:** Prepare raw data for analysis by removing noise and ensuring data integrity.\n",
         "\n",
-        "1️⃣ Data Loading & Cleaning\n",
+        "**Main Steps:**\n",
+        "- Drop personally identifiable information (`customerID`).\n",
+        "- ConvertI `TotalCharges` to numeric and impute missing values using: `TotalCharges` = `MonthlyCharges` * `tenure`\n",
+        "- Add derived features:\n",
+        "  - **CustomerType:** Phone only / Internet only / Both  \n",
+        "  - **NumInternetServices:** Count of active internet add-ons\n",
+        "- Handle missing values with median imputation for numerical columns.\n",
         "\n",
-        "* Source: dataset/raw/Telecom_Customer_Churn.csv\n",
+        "📁 **Output:** `telecom_customer_churn_cleaned.csv`  \n",
+        "✅ Cleaned dataset for EDA (no scaling applied).\n",
         "\n",
-        "* Removes personally identifiable information (customerID).\n",
+        "---\n",
         "\n",
-        "* Converts TotalCharges to numeric and imputes missing values using\n",
-        "TotalCharges = MonthlyCharges × tenure.\n",
+        "#### 2️⃣ Feature Encoding & Scaling (For Modeling)\n",
+        "**Goal:** Prepare features for machine learning algorithms.\n",
         "\n",
-        "* Ensures the dataset contains no missing values before model training.\n",
+        "**Transformations:**\n",
+        "- **Numerical columns:** Standardized using `StandardScaler()`.\n",
+        "- **Categorical columns:** One-hot encoded using `OneHotEncoder()` (drop first to avoid multicollinearity).\n",
         "\n",
-        "2️⃣ Feature Engineering\n",
+        "📁 **Output:** `telecom_customer_churn_encoded.csv`  \n",
+        "✅ Fully processed dataset for ML training.\n",
         "\n",
-        "* Creates a new CustomerType feature categorising users as: \"Phone only\", \"Internet only\", \"Both\"\n",
-        "\n",
-        "* Normalises inconsistent entries (“No internet service” → “No”).\n",
-        "\n",
-        "* Derives NumInternetServices, counting the number of active internet-based add-ons such as\n",
-        "OnlineSecurity, OnlineBackup, TechSupport, StreamingTV, etc. This feature quantifies customer engagement with telecom products.\n",
-        "\n",
-        "3️⃣ Preprocessing Pipelines\n",
-        "\n",
-        "🔹 Numeric Pipeline\n",
-        "\n",
-        "* Features: tenure, MonthlyCharges, TotalCharges, NumInternetServices\n",
-        "\n",
-        "    Steps:\n",
-        "\n",
-        "    * SimpleImputer(strategy='median') – handles any residual missing numeric values.\n",
-        "\n",
-        "    * StandardScaler() – standardises features to mean = 0, std = 1 for stable model performance.\n",
-        "\n",
-        "🔹 Categorical Pipeline\n",
-        "\n",
-        "*   Features: all non-numeric columns (e.g., Contract, PaymentMethod, Gender, CustomerType, etc.)\n",
-        "\n",
-        "    Steps:\n",
-        "\n",
-        "    * SimpleImputer(strategy='most_frequent') – fills missing categorical values.\n",
-        "\n",
-        "    * OneHotEncoder(handle_unknown='ignore', drop='first') – converts categories into binary variables, avoiding multicollinearity.\n",
-        "\n",
-        "    Both pipelines are combined via a ColumnTransformer into a single unified preprocessing step.\n",
-        "\n",
-        "4️⃣ Outputs & Diagnostics\n",
-        "\n",
-        "* The pipeline produces a fully encoded numeric feature matrix ready for model training.\n",
-        "\n",
-        "* Prints detailed diagnostics:\n",
-        "\n",
-        "    * Number of categorical and numeric features.\n",
-        "\n",
-        "    * Mapping of categories per feature.\n",
-        "\n",
-        "    * Final encoded column names.\n",
-        "\n",
-        "* Asserts that no missing values remain in the final dataset."
+        "---\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ ETL + preprocessing complete!\n",
-            "Processed dataset shape: (7043, 28)\n",
-            "Columns: ['SeniorCitizen', 'tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service'] ...\n",
-            "Data shape after cleaning: (7043, 22)\n",
+            "✅ ETL + Encoding pipeline completed successfully.\n",
+            "Cleaned shape: (7043, 22)\n",
+            "Encoded shape: (7043, 27)\n",
             "Categorical features: 17\n",
             "Numeric features: 5\n",
-            "Data shape after encoding: (7043, 28)\n",
+            "Data shape after encoding: (7043, 27)\n",
             "\n",
             "New Columns after One-Hot Encoding:\n",
             "\n",
-            "['SeniorCitizen', 'tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
+            "['tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
             "\n"
           ]
         }
       ],
       "source": [
-        "\"\"\"\n",
-        "ETL & Feature Engineering Pipeline for Telecom Churn Dataset\n",
-        "DataFrame-based implementation (avoids NumPy array output)\n",
-        "\"\"\"\n",
+        "# =========================================================\n",
+        "# TELECOM CUSTOMER CHURN PIPELINE (CLEAN + ENCODED)\n",
+        "# =========================================================\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
         "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.compose import ColumnTransformer\n",
         "\n",
-        "# =========================\n",
-        "# 1. Feature Engineering\n",
-        "# =========================\n",
+        "# =========================================================\n",
+        "# 1️⃣ Add Derived Features\n",
+        "# =========================================================\n",
         "def add_service_features(df):\n",
-        "    \"\"\"Add derived service-based features to the dataset.\"\"\"\n",
-        "\n",
-        "    # Define customer type based on available services\n",
+        "    \"\"\"Add engineered features related to service usage.\"\"\"\n",
+        "    # CustomerType: Phone only, Internet only, Both\n",
         "    def service_type(row):\n",
         "        if row['InternetService'] == 'No':\n",
         "            return \"Phone only\"\n",
@@ -642,91 +607,92 @@
         "            return \"Internet only\"\n",
         "        else:\n",
         "            return \"Both\"\n",
-        "\n",
         "    df['CustomerType'] = df.apply(service_type, axis=1)\n",
         "\n",
-        "    # Define internet add-ons\n",
+        "    # Internet add-ons\n",
         "    internet_add_ons = [\n",
         "        \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\",\n",
         "        \"TechSupport\", \"StreamingTV\", \"StreamingMovies\"\n",
         "    ]\n",
         "\n",
-        "    # Normalize categorical values\n",
+        "    # Normalize \"No internet service\" to \"No\"\n",
         "    for col in internet_add_ons:\n",
         "        df[col] = df[col].replace(\"No internet service\", \"No\")\n",
         "\n",
-        "    # Create feature: number of \"Yes\" internet services\n",
+        "    # Count number of active internet services\n",
         "    df[\"NumInternetServices\"] = (df[internet_add_ons] == \"Yes\").sum(axis=1)\n",
-        "\n",
         "    return df\n",
         "\n",
-        "\n",
-        "# =========================\n",
-        "# 2. Data Cleaning\n",
-        "# =========================\n",
+        "# =========================================================\n",
+        "# 2️⃣ ETL & Cleaning Stage (NO SCALING HERE)\n",
+        "# =========================================================\n",
         "def etl_clean_data(df):\n",
-        "    # Add service-based features\n",
+        "    # Add new engineered features\n",
         "    df = add_service_features(df)\n",
         "\n",
-        "    # Drop PII\n",
+        "    # Drop customerID (PII)\n",
         "    if 'customerID' in df.columns:\n",
         "        df.drop(\"customerID\", axis=1, inplace=True)\n",
         "\n",
         "    # Convert TotalCharges to numeric\n",
         "    df[\"TotalCharges\"] = pd.to_numeric(df[\"TotalCharges\"], errors=\"coerce\")\n",
         "\n",
-        "    # Impute missing TotalCharges using MonthlyCharges * tenure\n",
+        "    # Impute missing TotalCharges with domain logic\n",
         "    df.loc[df['TotalCharges'].isnull(), 'TotalCharges'] = (\n",
         "        df['MonthlyCharges'] * df['tenure']\n",
         "    )\n",
         "\n",
+        "    # Handle remaining missing values simply for EDA\n",
+        "    df.fillna(df.median(numeric_only=True), inplace=True)\n",
+        "\n",
         "    return df\n",
         "\n",
         "\n",
-        "# =========================\n",
-        "# 3. Manual Preprocessing (keeping Pandas format)\n",
-        "# =========================\n",
-        "def preprocess_dataframe(df):\n",
-        "    \"\"\"Perform imputation, scaling, and encoding directly in pandas.\"\"\"\n",
-        "    \n",
-        "    # Separate numeric and categorical columns\n",
-        "    numeric_features = [\"tenure\", \"MonthlyCharges\", \"TotalCharges\", \"NumInternetServices\"]\n",
+        "# =========================================================\n",
+        "# 3️⃣ Encoding & Scaling for Modeling\n",
+        "# =========================================================\n",
+        "def build_encoded_dataset(df):\n",
+        "    \"\"\"Apply one-hot encoding and scaling for ML model training.\"\"\"\n",
         "    categorical_features = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+        "    numeric_features = [\"tenure\", \"MonthlyCharges\", \"TotalCharges\", \"NumInternetServices\"]\n",
         "\n",
-        "    # 1️⃣ Impute missing numeric values\n",
-        "    for col in numeric_features:\n",
-        "        df[col] = df[col].fillna(df[col].median())\n",
-        "\n",
-        "    # 2️⃣ Scale numeric values (z-score normalization)\n",
-        "    df[numeric_features] = df[numeric_features].apply(\n",
-        "        lambda x: (x - x.mean()) / x.std()\n",
+        "    preprocessor = ColumnTransformer(\n",
+        "        transformers=[\n",
+        "            (\"num\", StandardScaler(), numeric_features),\n",
+        "            (\"cat\", OneHotEncoder(handle_unknown=\"ignore\", drop=\"first\"), categorical_features)\n",
+        "        ]\n",
         "    )\n",
         "\n",
-        "    # 3️⃣ Impute missing categorical values\n",
-        "    for col in categorical_features:\n",
-        "        df[col] = df[col].fillna(df[col].mode()[0])\n",
+        "    # Transform into encoded DataFrame\n",
+        "    encoded_array = preprocessor.fit_transform(df)\n",
         "\n",
-        "    # 4️⃣ One-hot encode categorical variables (drop_first=True for multicollinearity)\n",
-        "    df_encoded = pd.get_dummies(df, columns=categorical_features, drop_first=True)\n",
+        "    # Retrieve feature names\n",
+        "    cat_feature_names = preprocessor.named_transformers_[\"cat\"].get_feature_names_out(categorical_features)\n",
+        "    all_feature_names = numeric_features + list(cat_feature_names)\n",
         "\n",
-        "    return df_encoded\n",
+        "    df_encoded = pd.DataFrame(encoded_array, columns=all_feature_names)\n",
+        "\n",
+        "    return df_encoded, preprocessor\n",
         "\n",
         "\n",
-        "# =========================\n",
-        "# 4. Execute ETL + Preprocessing\n",
-        "# =========================\n",
+        "# =========================================================\n",
+        "# 4️⃣ Run the Pipeline\n",
+        "# =========================================================\n",
+        "# Load and clean\n",
         "df_cleaned = etl_clean_data(df)\n",
-        "df_encoded = preprocess_dataframe(df_cleaned)\n",
         "\n",
-        "# Save processed dataset\n",
+        "# Save cleaned (unscaled) dataset\n",
         "df_cleaned.to_csv(\"dataset/processed/telecom_customer_churn_cleaned.csv\", index=False)\n",
+        "\n",
+        "# Encode and scale (for ML use)\n",
+        "df_encoded, preprocessor = build_encoded_dataset(df_cleaned)\n",
+        "\n",
+        "# Save encoded dataset\n",
         "df_encoded.to_csv(\"dataset/processed/telecom_customer_churn_encoded.csv\", index=False)\n",
         "\n",
-        "\n",
-        "print(\"✅ ETL + preprocessing complete!\")\n",
-        "print(f\"Processed dataset shape: {df_encoded.shape}\")\n",
-        "print(\"Columns:\", df_encoded.columns.tolist()[:10], \"...\")\n",
-        "print(f\"Data shape after cleaning: {df_cleaned.shape}\")\n",
+        "print(\"✅ ETL + Encoding pipeline completed successfully.\")\n",
+        "print(f\"Cleaned shape: {df_cleaned.shape}\")\n",
+        "print(f\"Encoded shape: {df_encoded.shape}\")\n",
         "print(f\"Categorical features: {len(df_cleaned.select_dtypes(include=['object']).columns)}\")\n",
         "print(f\"Numeric features: {len(df_cleaned.select_dtypes(exclude=['object']).columns)}\")\n",
         "print(f\"Data shape after encoding: {df_encoded.shape}\")\n",
@@ -743,68 +709,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Remarks: After changing the data type, empty strings or invalid entries become NaN in TotolCharges column. the missing values of TotalCharges was imputed the formula assumes TotalCharges should roughly equal monthly charges multiplied by tenure."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ltNetd085qHf"
-      },
-      "source": [
-        "## **Part C**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "source": [
-        "### **Data Load** \n",
-        "### *Creating cleaned and encoded dataset*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* The resulting preprocessor in the pipeline can be directly plugged into an end-to-end machine learning workflow. Now we save a cleaned and encoded dataset for further use in ML model."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "'numpy.ndarray' object has no attribute 'to_csv'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[9], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m df_cleaned\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/processed/telecom_customer_churn_cleaned.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m df_encoded \u001b[38;5;241m=\u001b[39m df_encoded\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mdf_encoded\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_csv\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/processed/telecom_customer_churn_encoded.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCleaned and encoded dataset exported to dataset/processed/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'to_csv'"
-          ]
-        }
-      ],
-      "source": [
-        "# Export the cleaned dataframe to a CSV file in the folder for processed CSV\n",
-        "df_cleaned = df.copy()\n",
-        "df_cleaned.to_csv('dataset/processed/telecom_customer_churn_cleaned.csv', index=False)\n",
-        "df_encoded = df_encoded.copy()\n",
-        "df_encoded.to_csv('dataset/processed/telecom_customer_churn_encoded.csv', index=False)\n",
-        "\n",
-        "print(f'Cleaned and encoded dataset exported to dataset/processed/')"
+        "Remarks: \n",
+        "1. After changing the data type, empty strings or invalid entries become NaN in TotolCharges column. the missing values of TotalCharges was imputed the formula assumes TotalCharges should roughly equal monthly charges multiplied by tenure.\n",
+        "2. Cleaned dataset without scaling and encoding for better interpretability in EDA or dashboards."
       ]
     },
     {
