update README.md with table 4 & 5

--- a/jupyter_notebooks/2.etl.ipynb
+++ b/jupyter_notebooks/2.etl.ipynb
@@ -531,7 +531,7 @@
         "The preprocessing pipeline is designed to transform the raw Telecom Customer Churn dataset into a clean, machine-learning-ready format. It standardises data quality, engineers meaningful service-based features, and applies robust encoding and scaling methods to support predictive modelling.\n",
         "\n",
         "#### 1️⃣ ETL & Data Cleaning (No Scaling)\n",
-        "**Goal:** Prepare raw data for analysis by removing noise and ensuring data integrity.\n",
+        "**Purpose:** Prepare raw data for analysis by removing noise and ensuring data integrity.\n",
         "\n",
         "**Main Steps:**\n",
         "- Drop personally identifiable information (`customerID`).\n",
@@ -547,7 +547,7 @@
         "---\n",
         "\n",
         "#### 2️⃣ Feature Encoding & Scaling (For Modeling)\n",
-        "**Goal:** Prepare features for machine learning algorithms.\n",
+        "**Purpose:** Prepare features for machine learning algorithms.\n",
         "\n",
         "**Transformations:**\n",
         "- **Numerical columns:** Standardized using `StandardScaler()`.\n",
