change SeniorCitizen to categorical

--- a/jupyter_notebooks/2.etl.ipynb
+++ b/jupyter_notebooks/2.etl.ipynb
@@ -44,6 +44,12 @@
         "* 1 raw file will be used.\n",
         "    * [telecom_customer_churn.csv](../dataset/raw/telecom_customer_churn.csv) \n",
         "\n",
+        "### Ethical Considerations\n",
+        "\n",
+        "* The customerID field is removed to prevent exposure of personally identifiable information (PII), ensuring data privacy and compliance with regulations such as GDPR and CCPA.\n",
+        "\n",
+        "* The SeniorCitizen and gender fields are initially included during exploratory analysis to understand demographic patterns influencing customer churn. These field will be excluded from the final prediction model to prevent potential demographic bias and ensure fairness in churn prediction. This decision aligns with ethical AI principles by focusing on behavioral and service-related factors rather than personal characteristics.\n",
+        "\n",
         "### Outputs\n",
         "\n",
         "* A cleaned dataset will be save as a CSV file below\n",
